// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthPage tests renders correctly 1`] = `
<Connect(LoginPanel)
  handleSubmit={[Function]}
  ssoEnabled={false}
  title="Log In"
>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/auth/sso"
        >
          Single Sign-On
        </PageLink>
      </small>
    }
  />
</Connect(LoginPanel)>
`;

exports[`AuthPage tests renders correctly when there is a login error 1`] = `
<Connect(LoginPanel)
  handleSubmit={[Function]}
  loginError="uh oh!"
  ssoEnabled={false}
  title="Log In"
>
  <Panel.Footer
    left={false}
    right={
      <small>
        <PageLink
          to="/auth/sso"
        >
          Single Sign-On
        </PageLink>
      </small>
    }
  />
</Connect(LoginPanel)>
`;

exports[`AuthPage tests should show link to join when has_signup feature flag exists 1`] = `
<Connect(LoginPanel)
  handleSubmit={[Function]}
  ssoEnabled={false}
  title="Log In"
>
  <Panel.Footer
    left={
      <div>
        <small>
          Don't have an account? 
          <PageLink
            to="/join"
          >
            Sign up
          </PageLink>
          .
        </small>
        <br />
      </div>
    }
    right={
      <small>
        <PageLink
          to="/auth/sso"
        >
          Single Sign-On
        </PageLink>
      </small>
    }
  />
</Connect(LoginPanel)>
`;
